# SGAudioFFT

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  xyseriesaudio.cpp  xyseriesaudio.h
Resource/: images.qrc
